crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_field-3.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
v := {}
print ?v.a
print ?v.a.b.c


# Func:
function <[[main]]>:
  frame_size: 5
  length: 23
  const (length=4):
    0: "v"
    1: "a"
    2: "c"
    3: "b"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_reg r4
     5 | store_global [0]
     7 | load_global [0]
     9 | load_field_opt [1]
    11 | print 
    12 | load_global [0]
    14 | load_field_opt [1]
    16 | load_field_opt [3]
    18 | load_field_opt [2]
    20 | print 
    21 | ret 
    22 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  
