crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_field.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
v := { a: 0 }
print v.a
v.a = 1


# Chunk:
function <[[main]]>:
  frame_size: 2
  length: 38
  const (length=2):
    0: "a"
    1: "v"
  code:
     0 | create_empty_dict 
     1 | store_reg r0
     3 | load_const [0]
     5 | store_reg r1
     7 | push_small_int value=0
    12 | insert_to_dict r1, r0
    15 | load_reg r0
    17 | store_global [1]
    19 | load_global [1]
    21 | load_named [0]
    23 | print 
    24 | load_global [1]
    26 | store_reg r0
    28 | push_small_int value=1
    33 | store_named [0], r0
    36 | ret 
    37 | suspend 

