crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_literals-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
print 2.5

# Chunk:
function <test>:
length = 4
const pool = (length=1) {
  0 = 2.5
}
bytecode:
 0 | 03 00             load_const           slot=0
 2 | 29                print               
 3 | ff                suspend             

