crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_literals-4.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
print [0, 1, 2]

# Func:
function <[[main]]>:
  frame_size: 1
  length: 29
  const: <empty>
  code:
     0 | create_empty_list 
     1 | store_reg r0
     3 | push_small_int value=0
     8 | push_to_list r0
    10 | push_small_int value=1
    15 | push_to_list r0
    17 | push_small_int value=2
    22 | push_to_list r0
    24 | load_reg r0
    26 | print 
    27 | ret 
    28 | suspend 

