crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_literals-5.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
print { a: 0, b: 1, c: 2 }

# Chunk:
function <[[main]]>:
  frame_size: 4
  length: 44
  const (length=3):
    0: "a"
    1: "b"
    2: "c"
  code:
     0 | create_empty_dict 
     1 | store_reg r0
     3 | load_const [0]
     5 | store_reg r1
     7 | push_small_int value=0
    12 | insert_to_dict r1, r0
    15 | load_const [1]
    17 | store_reg r2
    19 | push_small_int value=1
    24 | insert_to_dict r2, r0
    27 | load_const [2]
    29 | store_reg r3
    31 | push_small_int value=2
    36 | insert_to_dict r3, r0
    39 | load_reg r0
    41 | print 
    42 | ret 
    43 | suspend 

