crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_literals.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
print 0

# Chunk:
function <[[main]]>:
  frame_size: 0
  length: 8
  const: <empty>
  code:
    0 | 11 00 00 00 00    push_small_int value=0
    5 | 2a                print 
    6 | 31                ret 
    7 | ff                suspend 

