crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__print_variable.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
v := 0
print v # load_reg


# Chunk:
function <test>:
  frame_size: 0
  length: 12
  const (length=2):
    0: "v"
    1: "v"
  code:
     0 | 11 00 00 00 00    push_small_int value=0
     5 | 09 00             store_global [0]
     7 | 08 01             load_global [1]
     9 | 2a                print 
    10 | 31                ret 
    11 | ff                suspend 

